ajustando o conteudo do card

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -5,9 +5,8 @@
     object-fit: cover;
     
     }
-}
 
-.card {
+    .card {
     border-radius: 4px;
     overflow: hidden;
     position: relative;
@@ -23,4 +22,17 @@
         #020617 100%
     );
    }
+
+   figcaption {
+    position: absolute;
+    bottom: 0;
+
+    padding: 24px;
+
+    h2 {
+        margin-top: 8px;
+    }
+   }
   }
+
+}
