--- a/styles/sections.css
+++ b/styles/sections.css
@@ -21,6 +21,7 @@ section header {
 }
 
 #featured {
+    grid-area: featured;
     
     img {
     height: 100%;
@@ -40,8 +41,7 @@ section header {
     background: linear-gradient(
         180deg,
         transparent 0%,
-        #020617 100%
-    );
+        #020617 100%);
    }
 
    figcaption {
@@ -63,6 +63,7 @@ section header {
 }
 
 #weekly {
+    grid-area: weekly;
 
 
     &>div {
@@ -88,3 +89,34 @@ section header {
         }
     }
 }
+
+#ai {
+    grid-area: ai;
+    img {
+        height: 176px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    h3 {
+        margin-block: 8px 4px;
+    }
+}
+
+aside {
+    grid-area: aside;
+}
+
+#more {
+    margin-top: 32px;
+  
+    h3 {
+      margin-top: 8px;
+    }
+  
+    img {
+      width: 72px;
+      aspect-ratio: 1/1;
+      object-fit: cover;
+    }
+  }
